--- a/templates/update_doctor_profile.html
+++ b/templates/update_doctor_profile.html
@@ -1,4 +1,4 @@
-{% extends 'base.html' %}
+{% comment %} {% extends 'base.html' %}
 
 {% load static %}
 
@@ -34,4 +34,45 @@ Update Doctor Profile
     .btn-primary:hover {
         background-color: #45a049;
     }
-</style>
+</style> {% endcomment %}
+
+
+<!-- templates/update_doctor_profile.html -->
+{% extends 'base.html' %}
+
+{% block title %}
+Update Profile
+{% endblock %}
+
+{% block content %}
+<div class="container mt-5">
+    <h1 class="text-center">Update Profile</h1>
+    <div class="card p-4 mt-4">
+        <form method="post" enctype="multipart/form-data">
+            {% csrf_token %}
+            {{ form.non_field_errors }}
+            {{ form.specialty.errors }}
+            <div class="form-group">
+                {{ form.specialty.label_tag }}
+                {{ form.specialty }}
+            </div>
+            {{ form.available_times.errors }}
+            <div class="form-group">
+                {{ form.available_times.label_tag }}
+                {{ form.available_times }}
+            </div>
+            {{ form.profile_picture.errors }}
+            <div class="form-group">
+                {{ form.profile_picture.label_tag }}
+                {{ form.profile_picture }}
+            </div>
+            {{ form.bio.errors }}
+            <div class="form-group">
+                {{ form.bio.label_tag }}
+                {{ form.bio }}
+            </div>
+            <button type="submit" class="btn btn-primary btn-block">Update Profile</button>
+        </form>
+    </div>
+</div>
+{% endblock %}
