--- a/templates/signup.html
+++ b/templates/signup.html
@@ -26,7 +26,7 @@ Sign Up
 
                         <div class="form-group mb-3">
                             <label for="{{ form.username.id_for_label }}" class="form-label font-weight-bold text-primary">Username</label>
-                            <input type="text" name="{{ form.username.name }}" id="{{ form.username.id_for_label }}" class="form-control rounded-pill" value="{{ form.username.value|default_if_none:'' }}" {% if form.username.attrs %} {{ form.username.attrs }} {% endif %}>
+                            <input type="text" name="{{ form.username.name }}" id="{{ form.username.id_for_label }}" class="form-control rounded-pill" value="{{ form.username.value|default_if_none:'' }}">
                             {% if form.username.errors %}
                                 <small class="text-danger">{{ form.username.errors }}</small>
                             {% endif %}
@@ -34,7 +34,7 @@ Sign Up
 
                         <div class="form-group mb-3">
                             <label for="{{ form.email.id_for_label }}" class="form-label font-weight-bold text-primary">Email</label>
-                            <input type="email" name="{{ form.email.name }}" id="{{ form.email.id_for_label }}" class="form-control rounded-pill" value="{{ form.email.value|default_if_none:'' }}" {% if form.email.attrs %} {{ form.email.attrs }} {% endif %}>
+                            <input type="email" name="{{ form.email.name }}" id="{{ form.email.id_for_label }}" class="form-control rounded-pill" value="{{ form.email.value|default_if_none:'' }}">
                             {% if form.email.errors %}
                                 <small class="text-danger">{{ form.email.errors }}</small>
                             {% endif %}
@@ -42,7 +42,7 @@ Sign Up
 
                         <div class="form-group mb-3">
                             <label for="{{ form.profile_picture.id_for_label }}" class="form-label font-weight-bold text-primary">Profile Picture</label>
-                            <input type="file" name="{{ form.profile_picture.name }}" id="{{ form.profile_picture.id_for_label }}" class="form-control-file" {% if form.profile_picture.attrs %} {{ form.profile_picture.attrs }} {% endif %}>
+                            <input type="file" name="{{ form.profile_picture.name }}" id="{{ form.profile_picture.id_for_label }}" class="form-control-file">
                             {% if form.profile_picture.errors %}
                                 <small class="text-danger">{{ form.profile_picture.errors }}</small>
                             {% endif %}
@@ -50,7 +50,7 @@ Sign Up
 
                         <div class="form-group mb-3">
                             <label for="{{ form.address_line1.id_for_label }}" class="form-label font-weight-bold text-primary">Address Line 1</label>
-                            <input type="text" name="{{ form.address_line1.name }}" id="{{ form.address_line1.id_for_label }}" class="form-control rounded-pill" value="{{ form.address_line1.value|default_if_none:'' }}" {% if form.address_line1.attrs %} {{ form.address_line1.attrs }} {% endif %}>
+                            <input type="text" name="{{ form.address_line1.name }}" id="{{ form.address_line1.id_for_label }}" class="form-control rounded-pill" value="{{ form.address_line1.value|default_if_none:'' }}">
                             {% if form.address_line1.errors %}
                                 <small class="text-danger">{{ form.address_line1.errors }}</small>
                             {% endif %}
@@ -58,7 +58,7 @@ Sign Up
 
                         <div class="form-group mb-3">
                             <label for="{{ form.city.id_for_label }}" class="form-label font-weight-bold text-primary">City</label>
-                            <input type="text" name="{{ form.city.name }}" id="{{ form.city.id_for_label }}" class="form-control rounded-pill" value="{{ form.city.value|default_if_none:'' }}" {% if form.city.attrs %} {{ form.city.attrs }} {% endif %}>
+                            <input type="text" name="{{ form.city.name }}" id="{{ form.city.id_for_label }}" class="form-control rounded-pill" value="{{ form.city.value|default_if_none:'' }}">
                             {% if form.city.errors %}
                                 <small class="text-danger">{{ form.city.errors }}</small>
                             {% endif %}
@@ -66,7 +66,7 @@ Sign Up
 
                         <div class="form-group mb-3">
                             <label for="{{ form.state.id_for_label }}" class="form-label font-weight-bold text-primary">State</label>
-                            <input type="text" name="{{ form.state.name }}" id="{{ form.state.id_for_label }}" class="form-control rounded-pill" value="{{ form.state.value|default_if_none:'' }}" {% if form.state.attrs %} {{ form.state.attrs }} {% endif %}>
+                            <input type="text" name="{{ form.state.name }}" id="{{ form.state.id_for_label }}" class="form-control rounded-pill" value="{{ form.state.value|default_if_none:'' }}">
                             {% if form.state.errors %}
                                 <small class="text-danger">{{ form.state.errors }}</small>
                             {% endif %}
@@ -74,7 +74,7 @@ Sign Up
 
                         <div class="form-group mb-3">
                             <label for="{{ form.pincode.id_for_label }}" class="form-label font-weight-bold text-primary">Pincode</label>
-                            <input type="text" name="{{ form.pincode.name }}" id="{{ form.pincode.id_for_label }}" class="form-control rounded-pill" value="{{ form.pincode.value|default_if_none:'' }}" {% if form.pincode.attrs %} {{ form.pincode.attrs }} {% endif %}>
+                            <input type="text" name="{{ form.pincode.name }}" id="{{ form.pincode.id_for_label }}" class="form-control rounded-pill" value="{{ form.pincode.value|default_if_none:'' }}">
                             {% if form.pincode.errors %}
                                 <small class="text-danger">{{ form.pincode.errors }}</small>
                             {% endif %}
@@ -82,7 +82,7 @@ Sign Up
 
                         <div class="form-group mb-3">
                             <label for="{{ form.password1.id_for_label }}" class="form-label font-weight-bold text-primary">Password</label>
-                            <input type="password" name="{{ form.password1.name }}" id="{{ form.password1.id_for_label }}" class="form-control rounded-pill" {% if form.password1.attrs %} {{ form.password1.attrs }} {% endif %}>
+                            <input type="password" name="{{ form.password1.name }}" id="{{ form.password1.id_for_label }}" class="form-control rounded-pill">
                             {% if form.password1.errors %}
                                 <small class="text-danger">{{ form.password1.errors }}</small>
                             {% endif %}
@@ -90,7 +90,7 @@ Sign Up
 
                         <div class="form-group mb-3">
                             <label for="{{ form.password2.id_for_label }}" class="form-label font-weight-bold text-primary">Confirm Password</label>
-                            <input type="password" name="{{ form.password2.name }}" id="{{ form.password2.id_for_label }}" class="form-control rounded-pill" {% if form.password2.attrs %} {{ form.password2.attrs }} {% endif %}>
+                            <input type="password" name="{{ form.password2.name }}" id="{{ form.password2.id_for_label }}" class="form-control rounded-pill">
                             {% if form.password2.errors %}
                                 <small class="text-danger">{{ form.password2.errors }}</small>
                             {% endif %}
@@ -98,11 +98,15 @@ Sign Up
 
                         <div class="form-group mb-3">
                             <label for="{{ form.user_type.id_for_label }}" class="form-label font-weight-bold text-primary">User Type</label>
-                            <select name="{{ form.user_type.name }}" id="{{ form.user_type.id_for_label }}" class="form-control rounded-pill">
-                                {% for choice in form.user_type.field.queryset %}
-                                    <option value="{{ choice.pk }}" {% if form.user_type.value == choice.pk %}selected{% endif %}>{{ choice }}</option>
-                                {% endfor %}
-                            </select>
+                            {% if form.user_type.field.choices %}
+                                <select name="{{ form.user_type.name }}" id="{{ form.user_type.id_for_label }}" class="form-control rounded-pill">
+                                    {% for choice in form.user_type.field.choices %}
+                                        <option value="{{ choice.0 }}" {% if form.user_type.value == choice.0 %}selected{% endif %}>{{ choice.1 }}</option>
+                                    {% endfor %}
+                                </select>
+                            {% else %}
+                                <input type="text" name="{{ form.user_type.name }}" id="{{ form.user_type.id_for_label }}" class="form-control rounded-pill" value="{{ form.user_type.value|default_if_none:'' }}">
+                            {% endif %}
                             {% if form.user_type.errors %}
                                 <small class="text-danger">{{ form.user_type.errors }}</small>
                             {% endif %}
