--- a/templates/create_blog_post.html
+++ b/templates/create_blog_post.html
@@ -3,12 +3,10 @@
 {% block title %}Create Blog Post{% endblock %}
 
 {% block content %}
-<div class="container mt-5">
-    <h2>Create Blog Post</h2>
-    <form method="post" enctype="multipart/form-data">
-        {% csrf_token %}
-        {{ form.as_p }}
-        <button type="submit" class="btn btn-primary">Submit</button>
-    </form>
-</div>
+<h2>Create New Blog Post</h2>
+<form method="post" enctype="multipart/form-data">
+    {% csrf_token %}
+    {{ form.as_p }}
+    <button type="submit">Create Post</button>
+</form>
 {% endblock %}
