--- a/templates/doctor_blogs.html
+++ b/templates/doctor_blogs.html
@@ -3,18 +3,17 @@
 {% block title %}My Blog Posts{% endblock %}
 
 {% block content %}
-<div class="container mt-5">
-    <h2>My Blog Posts</h2>
-    <a href="{% url 'create_blog_post' %}" class="btn btn-success mb-3">Create Blog Post</a>
+<h2>My Blog Posts</h2>
+<ul>
     {% for blog in blogs %}
-        <div class="card mb-3">
-            <img src="{{ blog.image.url }}" class="card-img-top" alt="...">
-            <div class="card-body">
-                <h5 class="card-title">{{ blog.title }}</h5>
-                <p class="card-text">{{ blog.summary }}</p>
-                <p class="card-text"><small class="text-muted">{{ blog.category.name }}</small></p>
-            </div>
-        </div>
+        <li>
+            <h3>{{ blog.title }}</h3>
+            <img src="{{ blog.image.url }}" alt="{{ blog.title }}">
+            <p>{{ blog.summary }}</p>
+            <a href="{% url 'category_blogs' blog.category.id %}">View Category</a>
+        </li>
+    {% empty %}
+        <p>No blog posts available.</p>
     {% endfor %}
-</div>
+</ul>
 {% endblock %}
