added bolgs all

--- a/templates/patient_dashboard.html
+++ b/templates/patient_dashboard.html
@@ -35,7 +35,7 @@ Patient Dashboard - Hospital App
     </div>
     <div class="row mb-4">
         <div class="col-md-12">
-            <a class="nav-link" href="{% url 'Patient_blog' %}">View Blog</a>
+            <a href="{% url 'Patient_blog' %}">View Patient Blogs</a>
         </div>
     </div>
     <!-- Appointments and Medical History sections -->
