--- a/templates/doctor_dashboard.html
+++ b/templates/doctor_dashboard.html
@@ -77,5 +77,10 @@ Doctor Dashboard
             {% endif %}
         </div>
     </div>
+    <div class="row mb-4">
+        <div class="col-md-12">
+            <a class="nav-link" href="{% url 'Doctor_blog' %}">View Blogs</a>
+        </div>
+    </div>
 </div>
 {% endblock %}
