added bolgs all

--- a/templates/doctor_dashboard.html
+++ b/templates/doctor_dashboard.html
@@ -79,7 +79,7 @@ Doctor Dashboard
     </div>
     <div class="row mb-4">
         <div class="col-md-12">
-            <a class="nav-link" href="{% url 'Doctor_blog' %}">View Blogs</a>
+            <a href="{% url 'Doctor_blog' %}">View Doctor Blogs</a>
         </div>
     </div>
 </div>
