added bolgs all

--- a/templates/patient_dashboard.html
+++ b/templates/patient_dashboard.html
@@ -33,13 +33,13 @@ Patient Dashboard - Hospital App
             </div>
         </div>
     </div>
-    <div class="row mb-4">
+   <!-- Patient Blogs Link -->
+   <div class="row mb-4">
         <div class="col-md-12">
-            <a href="{% url 'Patient_blog' %}">View Patient Blogs</a>
+            <a href="{% url 'Patient_blog' %}" class="btn btn-info">View Patient Blogs</a>
         </div>
     </div>
     <!-- Appointments and Medical History sections -->
     <!-- Add your existing code for appointments and medical history here -->
-
 </div>
 {% endblock %}
