--- a/templates/create_blog_post.html
+++ b/templates/create_blog_post.html
@@ -7,6 +7,6 @@
 <form method="post" enctype="multipart/form-data">
     {% csrf_token %}
     {{ form.as_p }}
-    <button type="submit">Create Post</button>
+    <button type="submit" class="btn btn-dark mt-3">Post</button>
 </form>
 {% endblock %}
