added bolgs all

--- a/templates/doctor_dashboard.html
+++ b/templates/doctor_dashboard.html
@@ -77,5 +77,10 @@ Doctor Dashboard
             {% endif %}
         </div>
     </div>
+    <div class="row mb-4">
+        <div class="col-md-12 text-center">
+            <a href="{% url 'doctor_blogs' %}" class="btn btn-dark">View Blog</a>
+        </div>
+    </div>
 </div>
 {% endblock %}
