--- a/templates/patient_dashboard.html
+++ b/templates/patient_dashboard.html
@@ -36,7 +36,7 @@ Patient Dashboard - Hospital App
 
     <div class="row mb-4">
         <div class="col-md-12 text-center">
-            <a href="{% url 'view_blog' %}" class="btn btn-secondary">View Blog</a>
+            <a href="{% url 'view_blog' %}" class="btn btn-dark">View Blog</a>
         </div>
     </div>
 
