--- a/templates/doctor_dashboard.html
+++ b/templates/doctor_dashboard.html
@@ -84,7 +84,7 @@ Doctor Dashboard
         </div>
         <div class="col-md-6">
             <h3>Create New Blog Post</h3>
-            <a href="{% url 'create_blog' %}" class="btn btn-dark">Create Blog Post</a>
+            <a href=href="{% url 'create_blog_post' %}">Post Blog</a>
         </div>
     </div>
 {% endblock %}
