--- a/templates/post_detail.html
+++ b/templates/post_detail.html
@@ -38,7 +38,11 @@
 {% endblock %}
 <style>
     .custom-img {
-        width: auto;
+        max-width: 100%;
         height: auto;
+        max-width: 600px; /* Example max-width */
+        max-height: 400px; /* Example max-height */
+        display: block;
+        margin: 0 auto;
     }
 </style>
