--- a/templates/book_appointment.html
+++ b/templates/book_appointment.html
@@ -2,7 +2,7 @@
 
 {% block content %}
 <div class="container mt-5">
-    <h1 class="text-center mb-4">Book Appointment with Dr. {{ doctor.user.username}}</h1>
+    <h1 class="text-center mb-4">Book Appointment with Dr. {{ doctor.user.first_name }} {{ doctor.user.last_name }}</h1>
     <div class="row justify-content-center">
         <div class="col-md-8 col-lg-6">
             <div class="card border-primary shadow-lg">
